test/errors/cast_missing_operand_fail.hy
// Expect failure: type cast without operand should report an error and recover
int main() {
    return int:
    return 0
}
